# VoxelPlanet

./: .gitattributes  .gitignore  .project  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  conanfile.txt
Docs/mods/: index.md
VoxelPlanet/: .cproject  .gitignore  CMakeLists.txt  README.md  version.rc
VoxelPlanet.ColorChanger/: .cproject  .project  CMakeLists.txt  README.md  mod.cpp
VoxelPlanet.Disintegration/: .cproject  .project  CMakeLists.txt  README.md  mod.cpp
VoxelPlanet.PoliticalCompass/: .cproject  .project  CMakeLists.txt  README.md  mod.cpp
VoxelPlanet.TestMod/: .cproject  .project  CMakeLists.txt  README.md  mod.cpp
VoxelPlanet/assets/shaders/world/: fragment.glsl  vertex.glsl
VoxelPlanet/src/: Camera.cpp  Camera.hpp  ColorScreen.cpp  ColorScreen.hpp  Player.cpp  Player.hpp  Screen.hpp  Settings.cpp  Settings.hpp  VoxelPlanet.cpp  World.cpp  World.hpp  global.cpp  global.hpp  mods.cpp  mods.h  mods.hpp  rendering.cpp  rendering.hpp
docs/: _config.yml  index.md
docs/commands/: index.md
docs/program/: doxygen.ini
docs/program/html/: ColorScreen_8hpp_source.html  Player_8hpp_source.html  Screen_8hpp_source.html  Settings_8hpp_source.html  World_8hpp_source.html  annotated.html  classColorScreen-members.html  classColorScreen.html  classPlayer-members.html  classPlayer.html  classScreen-members.html  classScreen.html  classSettings-members.html  classSettings.html  classWorld-members.html  classWorld.html  classes.html  dir_0c5e4e5efe1e4a9c6de68ae8158f2eca.html  dir_9012f803ab54eb2facdb9b028da261c4.html  files.html  functions.html  functions_func.html  functions_vars.html  global_8hpp.html  global_8hpp_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  menudata.js  mods_8hpp.html  mods_8hpp_source.html  rendering_8hpp.html  rendering_8hpp_source.html  structRayTraceInfo-members.html  structRayTraceInfo.html
docs/program/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+6 more)
src/: Blocks.hpp  Camera.cpp  Camera.hpp  Rendering.hpp  VoxelPlanet.cpp  VoxelPlanet.hpp  World.cpp  World.hpp  global.cpp  global.h  rendering.h  rendering.hpp  shaders.h
